# ai_find_fund

./: .coverage  .gitignore  CHANGELOG.md  DESIGN.md  README.md  build.sh  config.yaml.example  fund-advisor.spec  pyproject.toml  pytest.ini  test_input.py
.claude/: settings.local.json
data/: update_state.json
scripts/: daily_update.py  data_loader.py  init_fund_db.py  load_all_size.py  load_fund_history.py  load_fund_history_batch.py  load_missing_size.py
src/: __init__.py  main.py
src/agents/: critic.py  fund_expert.py  manager.py  requirement.py  risk.py
src/cache/: __init__.py  db.py
src/services/: akshare_client.py  fund_data.py  jq_client.py  returns_calculator.py  sina_client.py  tushare_client.py
src/utils/: config.py  llm.py
tests/: ENHANCEMENT_REPORT.md  TEST_REPORT.md  conftest.py  test_agents.py  test_akshare_client.py  test_cache_db.py  test_cli_e2e.py  test_config.py  test_data_loader.py  test_e2e_full_flow.py  test_fallback_strategy.py  test_fund_data.py  test_fund_expert_enhanced.py  test_fund_size_integration.py  test_llm.py  test_performance.py
